<resources>
    <string name="app_name">MyProfile</string>
    <string name="anglina_jolie">Anglina Jolie</string>
    <string name="photos">Photos</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="anglina_jolie_gmail_com">Anglina.jolie@gmail.com</string>
    <string name="_266_265_425">+266 265 425</string>
    <string name="add_to_group">Add to group</string>
    <string name="show_all_comments">Show all comments</string>
    <string name="follow_me">Follow Me</string>
    <string name="_322">322</string>
    <string name="_15m">15M</string>
    <string name="_45">45</string>
    <string name="imageicon">imageIcon</string>
</resources>
